--- a/tocs_database/static/css/header.css
+++ b/tocs_database/static/css/header.css
@@ -3,7 +3,7 @@ header {
     margin: 0 auto;
     position: relative;
     padding: 30px 0;
-    border-bottom: 1px solid #bac6d5;
+    border-bottom: 1px solid #b86061;
 }
 
 .nav-wrapper {
