Fixed broken link to about me page in projects.html

--- a/main/template/projects.html
+++ b/main/template/projects.html
@@ -2,8 +2,8 @@
 
 {% block header %}
 <h1>Current Projects:</h1><br />
-<p>Below is a list of all finished/ongoing projects. All projects below were made by <a href="about_me">me</a> using the Python coding language.</p>
-<!--Sections for complete and planned can be added later.-->
+<p>Below is a list of all finished/ongoing projects. All projects below were made by <a href="/index/about_me">me</a> using the Python coding language.</p>
+
 <h3>Ongoing/WIP Projects:</h3>
 {% endblock %}
 
