Adjusted links on index.html and projects.html to point to flightaware project page

--- a/main/template/index.html
+++ b/main/template/index.html
@@ -96,7 +96,7 @@
 									<span class="image">
 										<img width="353" height="330" src=" {% static 'images/pic02_flightaware.jpg' %} " alt="" />
 									</span>
-									<a href="/index/projects">
+									<a href="/index/projects/flightaware">
 										<h2>FlightAware Input Script</h2>
 										<div class="content">
 											<p></p>
