--- a/main/template/projects.html
+++ b/main/template/projects.html
@@ -4,7 +4,7 @@
 <h1>Current Projects:</h1><br />
 <p>Below is a list of all finished/ongoing projects. All projects below were made by <a href="/index/about_me">me</a> using the Python coding language.</p>
 
-<h3>Ongoing/WIP Projects:</h3>
+<h3>Completed/Previous Projects:</h3>
 {% endblock %}
 
 {% block titles %}
@@ -21,7 +21,7 @@
   <span class="image">
     <img width="353" height="330" src=" {% static 'images/pic02_flightaware.jpg' %} " alt="" />
   </span>
-  <a href="">
+  <a href="flightaware">
     <h2>FlightAware Input Script</h2>
     <div class="content">
       <p></p>
