--- a/main/template/flightaware.html
+++ b/main/template/flightaware.html
@@ -3,7 +3,7 @@
 {% block content %}
 {% load static %}
 <h1>FlightAware Project</h1>
-<img style="padding: 10px; margin-left: 24%;" width="600" height="244" src=" {% static 'images/1200px-FlightAware_logo.svg.png' %} " alt="FlightAwareLogo.png" />
+<img style="padding: 10px; width: auto; height: auto; max-width: 600px; display: block; margin: auto;" width="600" height="244" src=" {% static 'images/1200px-FlightAware_logo.svg.png' %} " alt="FlightAwareLogo.png" />
 <p>In June of 2019 I took a job working at Regeneron Pharmaceutical’s Global Security Operations Command Center as a Security Analyst. For 2 years while working there I had been teaching myself the coding language “Python”. I wrote basic scripts that automated some of my repetitive responsibilities, and this opened up time for me to work on more important projects and responsibilities. One of these projects ended up being a script that I had a chance to pitch to the Director and manager of Security.</p>
 <img style="padding: 10px; float: right;"  width="375" height="402" src=" {% static 'images/flightawaremap.jpg' %} " alt="flightawaremap.jpg" />
 <p> <a href="https://flightaware.com/"> FlightAware</a> is a web-based flight tracking software. With a free account, you can input up to 5 flight numbers, unlimited numbers with a paid account, and have those flights displayed on a map in real-time for the purpose of tracking them. My partner at the time, Kevin Meade, and I had the idea to use this software to track all Regeneron related travelers. However, we quickly ran into an issue: there was no way to mass input flight numbers, and Regeneron had hundreds of different travelers each day.</p>
