Adding Bakeryscan article to tiles. Modifying language in header.

--- a/main/template/index.html
+++ b/main/template/index.html
@@ -78,8 +78,8 @@
 							<header>
 								{% block header %}
 								<h1>Welcome to Matthew Turner's Portfolio.</h1><br />
-								<h3>Projects</h3>
-								<p>All projects below were made by <a href="about_me">me</a> using the Python coding language.</p>
+								<h3>Articles and Projects</h3>
+								<p>All projects and articles below were made by <a href="about_me">me</a> or a team I was on.</p>
 								{% endblock %}
 							</header>
 							<section class="tiles">
@@ -87,10 +87,10 @@
 
 								<article class="style3">
 									<span class="image">
-										<img width="353" height="330" src=" {% static 'images/pic03.jpg' %} " alt="" />
+										<img width="353" height="330" src=" {% static 'images/JapaneseBakeryWebSize.jpg' %} " alt="" />
 									</span>
-									<a href="/index/projects">
-										<h2>Coming Soon</h2>
+									<a href="https://matthewturner-irl.medium.com/bakeryscan-and-cyto-aiscan-52475b3cb779?source=friends_link&sk=a213fed9e8cbcd490feb4626dfe6e195">
+										<h2>BakeryScan and Cyto-AiSCAN Article</h2>
 										<div class="content">
 											<p></p>
 										</div>
@@ -148,8 +148,6 @@
 										<h2>Trails of Cold Steel Enemy Database</h2>
 									</a>
 								</article>
-
-
 							</section>
 							{% endblock %}
 						</div>
