Added Selenium Webdriver article to the tiles.

--- a/main/template/index.html
+++ b/main/template/index.html
@@ -98,10 +98,10 @@
 								</article>
 								<article class="style4">
 									<span class="image">
-										<img width="353" height="330" src=" {% static 'images/pic04.jpg' %} " alt="" />
+										<img width="353" height="330" src=" {% static 'images/blog2emojiWebSize.jpg' %} " alt="" />
 									</span>
-									<a href="/index/projects">
-										<h2>Coming Soon</h2>
+									<a href="https://matthewturner-irl.medium.com/navigating-htm-hell-with-selenium-5cb1b4c2e2a7?source=friends_link&sk=0d9fd7f63ce1489b485f02d10e5d862c">
+										<h2>Selenium Webdriver Article</h2>
 										<div class="content">
 											<p></p>
 										</div>
