--- a/main/template/index.html
+++ b/main/template/index.html
@@ -109,10 +109,10 @@
 								</article>
 								<article class="style5">
 									<span class="image">
-										<img width="353" height="330" src=" {% static 'images/pic05.jpg' %} " alt="" />
+										<img width="353" height="330" src=" {% static 'images/VenusM.jpg' %} " alt="" />
 									</span>
 									<a href="/index/projects">
-										<h2>Coming Soon</h2>
+										<h2>Venus Analytics Movie Trends Project</h2>
 										<div class="content">
 											<p></p>
 										</div>
