--- a/main/template/index.html
+++ b/main/template/index.html
@@ -111,7 +111,7 @@
 									<span class="image">
 										<img width="353" height="330" src=" {% static 'images/VenusM.jpg' %} " alt="" />
 									</span>
-									<a href="/index/projects">
+									<a href="https://github.com/austint1121/VenusMovieAnalysis">
 										<h2>Venus Analytics Movie Trends Project</h2>
 										<div class="content">
 											<p></p>
@@ -120,10 +120,10 @@
 								</article>
 								<article class="style6">
 									<span class="image">
-										<img width="353" height="330" src=" {% static 'images/pic06.jpg' %} " alt="" />
+										<img width="353" height="330" src=" {% static 'images/KingCounty.png' %} " alt="" />
 									</span>
-									<a href="/index/projects">
-										<h2>Coming Soon</h2>
+									<a href="https://github.com/Jyve00/King_County_Housing">
+										<h2>King's County Housing Prices Project</h2>
 										<div class="content">
 											<p></p>
 										</div>
