Changed wording of index.html opening line

--- a/main/template/index.html
+++ b/main/template/index.html
@@ -79,7 +79,7 @@
 								{% block header %}
 								<h1>Welcome to Matthew Turner's Portfolio.</h1><br />
 								<h3>Articles and Projects</h3>
-								<p>All projects and articles below were made by <a href="about_me">me</a> or a team I was on.</p>
+								<p>All projects and articles below were created by <a href="about_me">me</a></p>
 								{% endblock %}
 							</header>
 							<section class="tiles">
