--- a/main/template/index.html
+++ b/main/template/index.html
@@ -151,13 +151,27 @@
 							<br><br><h2>Articles and Blog posts</h2>
 							<p>All blog posts and articles below were written by <a href="about_me">me</a> and published on <a href="https://matthewturner-irl.medium.com/">Medium.com</a></p>
 							<section class="tiles">
-								<article class="style1">
-										<span class="image">
-											<img width="353" height="330" src=" {% static 'images/cs1.jpg' %} " alt="" />
-										</span>
-										<a href="/tocs">
-											<h2>Trails of Cold Steel Enemy Database</h2>
-										</a>
+								<article class="style3">
+									<span class="image">
+										<img width="353" height="330" src=" {% static 'images/JapaneseBakeryWebSize.jpg' %} " alt="" />
+									</span>
+									<a href="https://matthewturner-irl.medium.com/bakeryscan-and-cyto-aiscan-52475b3cb779?source=friends_link&sk=a213fed9e8cbcd490feb4626dfe6e195">
+										<h2>BakeryScan and Cyto-AiSCAN Article</h2>
+										<div class="content">
+											<p></p>
+										</div>
+									</a>
+								</article>
+								<article class="style4">
+									<span class="image">
+										<img width="353" height="330" src=" {% static 'images/blog2emojiWebSize.jpg' %} " alt="" />
+									</span>
+									<a href="https://matthewturner-irl.medium.com/navigating-htm-hell-with-selenium-5cb1b4c2e2a7?source=friends_link&sk=0d9fd7f63ce1489b485f02d10e5d862c">
+										<h2>Selenium Webdriver Article</h2>
+										<div class="content">
+											<p></p>
+										</div>
+									</a>
 								</article>
 							</section>
 							{% endblock %}
