Added project 3 to tiles

--- a/main/template/index.html
+++ b/main/template/index.html
@@ -97,10 +97,10 @@
 								</article>
 								<article class="style8">
 									<span class="image">
-										<img width="353" height="330" src=" {% static 'images/blog2emojiWebSize.jpg' %} " alt="" />
+										<img width="353" height="330" src="https://raw.githubusercontent.com/austint1121/Flatiron_GOATS_Vaccination_Prediction/main/Images/goat-vaccination.jpg" alt="" />
 									</span>
-									<a href="https://matthewturner-irl.medium.com/navigating-htm-hell-with-selenium-5cb1b4c2e2a7?source=friends_link&sk=0d9fd7f63ce1489b485f02d10e5d862c">
-										<h2>Selenium Webdriver Article</h2>
+									<a href="https://github.com/austint1121/Flatiron_GOATS_Vaccination_Prediction">
+										<h2>US Vaccination Status Prediction</h2>
 										<div class="content">
 											<p></p>
 										</div>
