Added project 4 to tiles

--- a/main/template/index.html
+++ b/main/template/index.html
@@ -86,10 +86,10 @@
 								{% block titles %}
 								<article class="style7">
 									<span class="image">
-										<img width="353" height="330" src=" {% static 'images/JapaneseBakeryWebSize.jpg' %} " alt="" />
+										<img width="353" height="330" src="https://raw.githubusercontent.com/austint1121/OES-PneumoniaClassification/main/Images/banner_Image.jpg" alt="" />
 									</span>
-									<a href="https://matthewturner-irl.medium.com/bakeryscan-and-cyto-aiscan-52475b3cb779?source=friends_link&sk=a213fed9e8cbcd490feb4626dfe6e195">
-										<h2>BakeryScan and Cyto-AiSCAN Article</h2>
+									<a href="https://github.com/austint1121/OES-PneumoniaClassification">
+										<h2>Diagnostic Imaging Pneumonia Classification</h2>
 										<div class="content">
 											<p></p>
 										</div>
