--- a/main/template/index.html
+++ b/main/template/index.html
@@ -86,6 +86,17 @@
 								{% block titles %}
 								<article class="style7">
 									<span class="image">
+										<img width="353" height="330" src="https://raw.githubusercontent.com/austint1121/Undiagnosed-ADHD-Identification/main/Images/title_card.jpg" alt="" />
+									</span>
+									<a href="https://github.com/austint1121/Undiagnosed-ADHD-Identification">
+										<h2>Identifying Undiagnosed ADHD with Machine Learning</h2>
+										<div class="content">
+											<p></p>
+										</div>
+									</a>
+								</article>
+								<article class="style5">
+									<span class="image">
 										<img width="353" height="330" src="https://raw.githubusercontent.com/austint1121/OES-PneumoniaClassification/main/Images/banner_Image.jpg" alt="" />
 									</span>
 									<a href="https://github.com/austint1121/OES-PneumoniaClassification">
@@ -127,25 +138,6 @@
 										<div class="content">
 											<p></p>
 										</div>
-									</a>
-								</article>
-								<article class="style2">
-									<span class="image">
-										<img width="353" height="330" src=" {% static 'images/pic02_flightaware.jpg' %} " alt="" />
-									</span>
-									<a href="/index/projects/flightaware">
-										<h2>FlightAware Input Script</h2>
-										<div class="content">
-											<p></p>
-										</div>
-									</a>
-								</article>
-								<article class="style1">
-									<span class="image">
-										<img width="353" height="330" src=" {% static 'images/cs1.jpg' %} " alt="" />
-									</span>
-									<a href="/tocs">
-										<h2>Trails of Cold Steel Enemy Database</h2>
 									</a>
 								</article>
 							</section>
