Centered the tiles for better spacing.

--- a/main/template/index.html
+++ b/main/template/index.html
@@ -82,7 +82,7 @@
 								<p>All projects and articles below were created by <a href="about_me">me</a></p>
 								{% endblock %}
 							</header>
-							<section class="tiles">
+							<section class="tiles" style="justify-content: center;">
 								{% block titles %}
 								<article class="style7">
 									<span class="image">
