Added article 3 and 4

--- a/main/template/index.html
+++ b/main/template/index.html
@@ -141,6 +141,7 @@
 									</a>
 								</article>
 							</section>
+
 							<br><br><h2>Articles and Blog posts</h2>
 							<p>All blog posts and articles below were written by <a href="about_me">me</a> and published on <a href="https://matthewturner-irl.medium.com/">Medium.com</a></p>
 							<section class="tiles">
@@ -161,6 +162,28 @@
 									</span>
 									<a href="https://matthewturner-irl.medium.com/navigating-htm-hell-with-selenium-5cb1b4c2e2a7?source=friends_link&sk=0d9fd7f63ce1489b485f02d10e5d862c">
 										<h2>Selenium Webdriver Article</h2>
+										<div class="content">
+											<p></p>
+										</div>
+									</a>
+								</article>
+								<article class="style1">
+									<span class="image">
+										<img width="353" height="330" src="https://miro.medium.com/max/1112/1*sbPKtlpzCnF-3T1gi7U2Xw.jpeg" alt="" />
+									</span>
+									<a href="https://matthewturner-irl.medium.com/customized-object-detection-using-tensorflow-14dd9fa6dfb6?source=friends_link&sk=24a83420d36accd197fcef4a91776e14">
+										<h2>Customized Object Detection Tutorial with Tensorflow</h2>
+										<div class="content">
+											<p></p>
+										</div>
+									</a>
+								</article>
+								<article class="style2">
+									<span class="image">
+										<img width="353" height="330" src="https://miro.medium.com/max/552/0*2FvIw6stA7MxOvZ_" alt="" />
+									</span>
+									<a href="https://matthewturner-irl.medium.com/an-introduction-to-adversarial-attacks-16395579c9f6">
+										<h2>Introduction to Adversarial Attacks on Neural Networks</h2>
 										<div class="content">
 											<p></p>
 										</div>
