Centered the "Articles" section

--- a/main/template/index.html
+++ b/main/template/index.html
@@ -144,7 +144,7 @@
 
 							<br><br><h2>Articles and Blog posts</h2>
 							<p>All blog posts and articles below were written by <a href="about_me">me</a> and published on <a href="https://matthewturner-irl.medium.com/">Medium.com</a></p>
-							<section class="tiles">
+							<section class="tiles" style="justify-content: center;">
 								<article class="style3">
 									<span class="image">
 										<img width="353" height="330" src=" {% static 'images/JapaneseBakeryWebSize.jpg' %} " alt="" />
