Adjusted header wording for the "Projects" section

--- a/main/template/index.html
+++ b/main/template/index.html
@@ -78,8 +78,8 @@
 							<header>
 								{% block header %}
 								<h1>Welcome to Matthew Turner's Portfolio.</h1><br />
-								<h3>Projects</h3>
-								<p>All projects and articles below were created by <a href="about_me">me</a></p>
+								<h3>Recent Projects</h3>
+								<p>All projects below were created by <a href="about_me">me</a> and can be found on my <a href="https://github.com/austint1121">Github</a> </p>
 								{% endblock %}
 							</header>
 							<section class="tiles" style="justify-content: center;">
