Added template tag for retired projects

--- a/main/template/index.html
+++ b/main/template/index.html
@@ -191,6 +191,10 @@
 								</article>
 							</section>
 							{% endblock %}
+
+							{% block retired %}
+
+							{% endblock %}
 						</div>
 					</div>
 
